# TRELLIS-BOX

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  app.py  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml  docker.env.example  example_state.py  example_with_refinement.py  install.sh  pyproject.toml  requirements.macos.txt  requirements.txt  trellis  trellis.sh
.streamlit/: config.toml
TRELLIS/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker.env.example  pyproject.toml  requirements.txt  trellis.sh
TRELLIS.2/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_texturing.py  requirements.docker.txt
TRELLIS.2/docker/: entrypoint.sh
TRELLIS.2/o-voxel/: setup.py
TRELLIS.2/trellis2/models/: __init__.py  sparse_structure_flow.py  structured_latent_flow.py
TRELLIS.2/trellis2/modules/: image_feature_extractor.py
TRELLIS.2/trellis2/modules/attention/: config.py  full_attn.py
TRELLIS.2/trellis2/modules/sparse/: config.py
TRELLIS.2/trellis2/modules/sparse/attention/: full_attn.py  windowed_attn.py
TRELLIS.2/trellis2/pipelines/: base.py  trellis2_image_to_3d.py  trellis2_texturing.py
TRELLIS.2/trellis2/pipelines/rembg/: BiRefNet.py
TRELLIS.2/trellis2/pipelines/samplers/: flow_euler.py
TRELLIS.2/trellis2/renderers/: pbr_mesh_renderer.py
TRELLIS.2/trellis2/utils/: device.py  render_utils.py
TRELLIS/.streamlit/: config.toml
TRELLIS/docs/: DOCKER_CONFIGURATION.md  IMAGE_REFINEMENT.md
TRELLIS/scripts/: check_gpu.sh  dev.sh  status.sh
TRELLIS/trellis/modules/: utils.py
TRELLIS/trellis/modules/attention/: __init__.py
TRELLIS/trellis/modules/sparse/: __init__.py
TRELLIS/trellis/modules/sparse/attention/: full_attn.py
TRELLIS/trellis/modules/sparse/conv/: __init__.py  conv_torch.py
TRELLIS/trellis/pipelines/: image_refiner.py  trellis_image_to_3d.py
TRELLIS/trellis/renderers/: gaussian_render.py
TRELLIS/webui/: loading_screen.py
docs/: DOCKER_CONFIGURATION.md  IMAGE_REFINEMENT.md  MEMORY_LEAK_FIXES.md
scripts/: build.sh  check_gpu.sh  dev.sh  publish.sh  restart.sh  run.sh  status.sh  stop.sh
trellis/: __init__.py
trellis/models/: sparse_structure_flow.py
trellis/modules/attention/: __init__.py
trellis/modules/sparse/: basic.py
trellis/modules/sparse/attention/: serialized_attn.py  windowed_attn.py
trellis/pipelines/: image_refiner.py  trellis_image_to_3d.py
trellis/pipelines/samplers/: flow_euler.py
trellis/representations/mesh/: cube2mesh.py  flexicube.py  utils_cube.py
trellis/utils/: device.py  postprocessing_utils.py  render_utils.py
webui/: __init__.py  app_ui.py  image_preview.py  initialize_pipeline.py  loading_screen.py  multi_image_ui.py  single_image_ui.py  state_manager.py  ui_components.py
webui/controllers/: __init__.py  app_controller.py  generation_controller.py  memory_controller.py
wheels/: nvdiffrast-0.3.3-cp310-cp310-linux_x86_64.whl
